Aqua Tier 1-3 spells

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Source/packages/Lib.Harmony.2.0.1
 /Source/obj/Debug
 /Source/.vs/CoC-Cults-MoreDeities/v16
+/Textures/Buildings/Sculptures/Aqua.psd
